--- a/error.html
+++ b/error.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 h-screen flex items-center justify-center">
-    <div class="text-center">
+    <main class="text-center">
       <h1 class="text-9xl font-bold text-purple-600">404</h1>
       <p class="text-2xl md:text-3xl font-light text-gray-700 mt-4">
         Oops! Page not found.
@@ -19,10 +19,11 @@
 
       <a
         href="/"
-        class="mt-8 inline-block bg-purple-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg hover:bg-purple-700 transition duration-300"
+        class="mt-8 inline-block bg-purple-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 transition duration-300"
+        aria-label="Go back to the home page"
       >
         Go Back Home
       </a>
-    </div>
+    </main>
   </body>
 </html>
