--- a/Todo.html
+++ b/Todo.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,25 +12,102 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <style>
+      /* Inline basic styles for simplicity */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f3f4f6;
+        color: #333;
+        margin: 0;
+        padding: 20px;
+      }
+
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .subtitle {
+        text-align: center;
+        margin-bottom: 20px;
+        color: #4a5568;
+      }
+
+      .js-add-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+
+      .js-add-html {
+        margin-top: 20px;
+      }
+
+      .js-actions-wrapper {
+        grid-column: span 2;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .sort-filter-container {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+      }
+
+      .sort-buttons button,
+      .js-add-button {
+        background-color: #4c51bf;
+        color: #fff;
+        border: none;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      .sort-buttons button:hover,
+      .js-add-button:hover {
+        background-color: #4338ca;
+      }
+
+      .footer {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 14px;
+        color: #a0aec0;
+      }
+
+      .social-media a {
+        margin: 0 5px;
+        color: #4a5568;
+        transition: color 0.3s;
+      }
+
+      .social-media a:hover {
+        color: #4c51bf;
+      }
+
+      #js-success-notification {
+        background-color: #48bb78;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        text-align: center;
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <h1 class="subtitle">Todo-List</h1>
 
       <div class="js-add-grid" id="add-todo">
-        <input
-          type="text"
-          placeholder="Share Your Thoughts"
-          class="js-name-input"
-        />
-
+        <input type="text" placeholder="Share Your Thoughts" class="js-name-input" />
         <input type="date" class="js-date-input" min="" />
         <input type="time" class="js-time-input" />
         <select class="js-category-input">
@@ -48,18 +125,17 @@
         </select>
         <div class="js-actions-wrapper">
           <button class="js-add-button">
-            <i class="fa-solid fa-add"></i>
+            <i class="fa-solid fa-plus"></i>
           </button>
           <button class="js-cancel-button" title="Cancel">
             <i class="fa-solid fa-times"></i>
           </button>
         </div>
         <div id="js-success-notification" style="display: none">
-          <p>Task completed 🎉</p>
+          <p>Task added successfully 🎉</p>
         </div>
       </div>
 
-      <!-- Add this new div for sorting buttons -->
       <div class="sort-buttons">
         <div class="sort-filter-container">
           <button class="sort-button" onclick="sortTodos('category')">
@@ -83,27 +159,95 @@
     <footer class="footer">
       <p>&copy; 2024 Made with &#10084; by Ansh Grover. All rights reserved.</p>
       <div class="social-media">
-        <a class="insta" href="https://www.instagram.com/" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a class="facebook" href="https://www.facebook.com/" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a class="x" href="https://x.com/i/flow/login" target="_blank"
-          ><i class="fa-brands fa-x-twitter"></i
-        ></a>
-        <a class="linkedin" href="https://www.linkedin.com/" target="_blank"
-          ><i class="fa-brands fa-linkedin-in"></i
-        ></a>
-        <a class="github" href="https://github.com/Groverio" target="_blank"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        <a class="youtube" href="https://www.youtube.com/" target="_blank"
-          ><i class="fa-brands fa-youtube"></i
-        ></a>
+        <a class="insta" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a class="facebook" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a class="x" href="https://x.com/i/flow/login" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+        <a class="linkedin" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a class="github" href="https://github.com/Groverio" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a class="youtube" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+      // JavaScript for managing tasks
+      const tasks = [];
+
+      document.querySelector('.js-add-button').addEventListener('click', () => {
+        const nameInput = document.querySelector('.js-name-input').value.trim();
+        const dateInput = document.querySelector('.js-date-input').value;
+        const timeInput = document.querySelector('.js-time-input').value;
+        const categoryInput = document.querySelector('.js-category-input').value;
+        const priorityInput = document.querySelector('.js-priority-input').value;
+
+        if (nameInput && dateInput && timeInput && categoryInput && priorityInput) {
+          const newTask = {
+            name: nameInput,
+            date: dateInput,
+            time: timeInput,
+            category: categoryInput,
+            priority: priorityInput,
+            status: 'pending'
+          };
+          tasks.push(newTask);
+          displayTasks();
+          document.querySelector('#js-success-notification').style.display = 'block';
+          setTimeout(() => {
+            document.querySelector('#js-success-notification').style.display = 'none';
+          }, 3000);
+        } else {
+          alert('Please fill in all the fields.');
+        }
+      });
+
+      function displayTasks() {
+        const tasksContainer = document.querySelector('.js-add-html-tasks');
+        tasksContainer.innerHTML = '';
+
+        tasks.forEach((task, index) => {
+          const taskElement = document.createElement('div');
+          taskElement.className = 'task';
+          taskElement.innerHTML = `
+            <p>${task.name} - ${task.date} ${task.time}</p>
+            <p>Category: ${task.category} | Priority: ${task.priority}</p>
+            <button onclick="completeTask(${index})">Complete</button>
+          `;
+          tasksContainer.appendChild(taskElement);
+        });
+      }
+
+      function completeTask(index) {
+        tasks[index].status = 'completed';
+        displayTasks();
+      }
+
+      function sortTodos(criteria) {
+        tasks.sort((a, b) => (a[criteria] > b[criteria] ? 1 : -1));
+        displayTasks();
+      }
+
+      function filterTodos() {
+        const filterValue = document.querySelector('.js-filter-input').value;
+        const filteredTasks = tasks.filter((task) =>
+          filterValue === 'all' ? true : task.status === filterValue
+        );
+        displayFilteredTasks(filteredTasks);
+      }
+
+      function displayFilteredTasks(filteredTasks) {
+        const tasksContainer = document.querySelector('.js-add-html-tasks');
+        tasksContainer.innerHTML = '';
+
+        filteredTasks.forEach((task, index) => {
+          const taskElement = document.createElement('div');
+          taskElement.className = 'task';
+          taskElement.innerHTML = `
+            <p>${task.name} - ${task.date} ${task.time}</p>
+            <p>Category: ${task.category} | Priority: ${task.priority}</p>
+            <button onclick="completeTask(${index})">Complete</button>
+          `;
+          tasksContainer.appendChild(taskElement);
+        });
+      }
+    </script>
   </body>
 </html>
