--- a/Todo.html
+++ b/Todo.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,25 +12,58 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <style>
+      /* Add your styles here */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f3f4f6;
+        margin: 0;
+        padding: 20px;
+      }
+
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .subtitle {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .js-add-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+
+      .js-actions-wrapper {
+        grid-column: span 2;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .sort-buttons {
+        margin-top: 20px;
+      }
+
+      .footer {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 14px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <h1 class="subtitle">Todo-List</h1>
 
       <div class="js-add-grid" id="add-todo">
-        <input
-          type="text"
-          placeholder="Share Your Thoughts"
-          class="js-name-input"
-        />
-
+        <input type="text" placeholder="Share Your Thoughts" class="js-name-input" />
         <input type="date" class="js-date-input" min="" />
         <input type="time" class="js-time-input" />
         <select class="js-category-input">
@@ -48,62 +81,128 @@
         </select>
         <div class="js-actions-wrapper">
           <button class="js-add-button">
-            <i class="fa-solid fa-add"></i>
+            <i class="fa-solid fa-plus"></i> Add
           </button>
           <button class="js-cancel-button" title="Cancel">
-            <i class="fa-solid fa-times"></i>
+            <i class="fa-solid fa-times"></i> Cancel
           </button>
         </div>
         <div id="js-success-notification" style="display: none">
-          <p>Task completed 🎉</p>
+          <p>Task added successfully 🎉</p>
         </div>
       </div>
 
-      <!-- Add this new div for sorting buttons -->
       <div class="sort-buttons">
-        <div class="sort-filter-container">
-          <button class="sort-button" onclick="sortTodos('category')">
-            Sort by Category
-          </button>
-          <button class="sort-button" onclick="sortTodos('priority')">
-            Sort by Priority
-          </button>
-          <select class="js-filter-input" onchange="filterTodos()">
-            <option value="all">All</option>
-            <option value="pending">Pending</option>
-            <option value="completed">Completed</option>
-          </select>
-        </div>
+        <button class="sort-button" onclick="sortTodos('category')">Sort by Category</button>
+        <button class="sort-button" onclick="sortTodos('priority')">Sort by Priority</button>
+        <select class="js-filter-input" onchange="filterTodos()">
+          <option value="all">All</option>
+          <option value="pending">Pending</option>
+          <option value="completed">Completed</option>
+        </select>
       </div>
-      <div class="test">
-        <div class="js-add-html js-add-grid js-add-html-tasks"></div>
-      </div>
+
+      <div class="js-add-html js-add-grid js-add-html-tasks"></div>
     </div>
 
     <footer class="footer">
-      <p>&copy; 2024 Made with &#10084; by Ansh Grover. All rights reserved.</p>
+      <p>&copy; 2024 Made with ❤️ by Ansh Grover. All rights reserved.</p>
       <div class="social-media">
-        <a class="insta" href="https://www.instagram.com/" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a class="facebook" href="https://www.facebook.com/" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a class="x" href="https://x.com/i/flow/login" target="_blank"
-          ><i class="fa-brands fa-x-twitter"></i
-        ></a>
-        <a class="linkedin" href="https://www.linkedin.com/" target="_blank"
-          ><i class="fa-brands fa-linkedin-in"></i
-        ></a>
-        <a class="github" href="https://github.com/Groverio" target="_blank"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        <a class="youtube" href="https://www.youtube.com/" target="_blank"
-          ><i class="fa-brands fa-youtube"></i
-        ></a>
+        <a class="insta" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a class="facebook" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a class="x" href="https://x.com/i/flow/login" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+        <a class="linkedin" href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a class="github" href="https://github.com/Groverio" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a class="youtube" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+      // JavaScript for handling the To-Do List functionality
+      const tasks = [];
+
+      document.querySelector('.js-add-button').addEventListener('click', () => {
+        const name = document.querySelector('.js-name-input').value.trim();
+        const date = document.querySelector('.js-date-input').value;
+        const time = document.querySelector('.js-time-input').value;
+        const category = document.querySelector('.js-category-input').value;
+        const priority = document.querySelector('.js-priority-input').value;
+
+        if (name && date && time && category && priority) {
+          const newTask = {
+            name,
+            date,
+            time,
+            category,
+            priority,
+            status: 'pending'
+          };
+          tasks.push(newTask);
+          displayTasks();
+          showNotification('Task added successfully 🎉');
+        } else {
+          alert('Please fill in all the fields.');
+        }
+      });
+
+      function displayTasks() {
+        const taskContainer = document.querySelector('.js-add-html-tasks');
+        taskContainer.innerHTML = '';
+
+        tasks.forEach((task, index) => {
+          const taskElement = document.createElement('div');
+          taskElement.className = 'task';
+          taskElement.innerHTML = `
+            <p>${task.name} - ${task.date} ${task.time}</p>
+            <p>Category: ${task.category} | Priority: ${task.priority}</p>
+            <button onclick="completeTask(${index})">Complete</button>
+          `;
+          taskContainer.appendChild(taskElement);
+        });
+      }
+
+      function completeTask(index) {
+        tasks[index].status = 'completed';
+        displayTasks();
+      }
+
+      function sortTodos(criteria) {
+        tasks.sort((a, b) => a[criteria].localeCompare(b[criteria]));
+        displayTasks();
+      }
+
+      function filterTodos() {
+        const filterValue = document.querySelector('.js-filter-input').value;
+        const filteredTasks = filterValue === 'all' 
+          ? tasks 
+          : tasks.filter(task => task.status === filterValue);
+        displayFilteredTasks(filteredTasks);
+      }
+
+      function displayFilteredTasks(filteredTasks) {
+        const taskContainer = document.querySelector('.js-add-html-tasks');
+        taskContainer.innerHTML = '';
+
+        filteredTasks.forEach((task, index) => {
+          const taskElement = document.createElement('div');
+          taskElement.className = 'task';
+          taskElement.innerHTML = `
+            <p>${task.name} - ${task.date} ${task.time}</p>
+            <p>Category: ${task.category} | Priority: ${task.priority}</p>
+            <button onclick="completeTask(${index})">Complete</button>
+          `;
+          taskContainer.appendChild(taskElement);
+        });
+      }
+
+      function showNotification(message) {
+        const notification = document.querySelector('#js-success-notification');
+        notification.textContent = message;
+        notification.style.display = 'block';
+        setTimeout(() => {
+          notification.style.display = 'none';
+        }, 3000);
+      }
+    </script>
   </body>
 </html>
